--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+.App-wrapper {
+    display: grid;
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 2fr 10fr;
+  /*Расстояние между строк*/
+    grid-gap: 10px;
+  grid-template-areas: "h h" "n c";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header {
+    grid-area: h;
+    background-color: #ff0000;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header img {
+    width: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Navbar {
+    grid-area: n;
+    background-color: yellow;
 }
 
-.App-link {
-  color: #61dafb;
+.Content {
+    grid-area: c;
+    background-color: #007ba2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*.Navbar {*/
+/*  background-color: yellow;*/
+/*}*/
