20. Заменил a на Navlink и немного застлизовал их

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,13 @@
 .Navbar {
     grid-area: n;
-    background-color: yellow;
+    background-color: #405b2d;
 }
 
-.Item {
-    color: #941717;
+.Item a {
+    color: white;
+    text-decoration: none;
+}
+
+.Item a.activeLink {
+    color: gold;
 }
